# icd-chapter-mistral

./: .gitignore  README.md  pyproject.toml
data_preparation/: build_dataset.py  explore_dataset.ipynb  note_cleaner.py  sample_data_splits.py  system_prompt.txt
fine_tuning/configs/: config.yaml
fine_tuning/data/: test.jsonl
fine_tuning/src/: __init__.py  datasets.py  eval.py  metrics.py  mistral_api.py  train.py  utils.py
